--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - "8080:8080"
     env_file:
       - .env
+    environment:
+      DATABASE_URL: postgresql://postgres:99532553@db:5432/driveme?schema=public
     depends_on:
       - db
 
