--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-version: '3.9'
-
 services:
   frontend:
     build:
       context: ./drive-me-frontend
       dockerfile: Dockerfile
+      args:
+        GOOGLE_API_KEY: ${GOOGLE_API_KEY}
     ports:
       - "80:80"
-    env_file:
-      - .env
+    environment:
+      - VITE_GOOGLE_API_KEY=${GOOGLE_API_KEY}
 
   backend:
     build:
